--- a/Platzi-games/landing.html
+++ b/Platzi-games/landing.html
@@ -12,13 +12,31 @@
       <div class="intro__imagen"><img src="images/imagen.png"></div>
       <div class="intro__contenido">
         <h2>Titulo Principal</h2>
-        <p>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. 
-          Proin sit amet tellus nec nisl bibendum ornare nec at augue. 
-          Integer semper feugiat varius.
-        </p><span>Proin sed urna quis orci interdum rutrum. Integer rhoncus finibus nunc, ac porttitor ex dapibus ac.</span><a class="boton">Leer Mas</a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. Proin sit amet tellus nec nisl bibendum ornare nec at augue. Integer semper feugiat varius.</p><span>Proin sed urna quis orci interdum rutrum. Integer rhoncus finibus nunc, ac porttitor ex dapibus ac.</span><a class="boton">Leer Mas</a>
       </div>
     </section>
+    <main class="contenido">
+      <div class="caja">
+        <div class="caja__imagen"><img src="images/imagen.png"/></div>
+        <div class="caja__contenido">
+          <h3>Subtitulo 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. Proin sit amet tellus nec nisl bibendum ornare nec at augue. Integer semper feugiat varius. </p>
+        </div>
+      </div>
+      <div class="caja">
+        <div class="caja__imagen"><img src="images/imagen.png"/></div>
+        <div class="caja__contenido">
+          <h3>Subtitulo 2</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. Proin sit amet tellus nec nisl bibendum ornare nec at augue. Integer semper feugiat varius. </p>
+        </div>
+      </div>
+      <div class="caja">
+        <div class="caja__imagen"><img src="images/imagen.png"/></div>
+        <div class="caja__contenido">
+          <h3>Subtitulo 3</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. Proin sit amet tellus nec nisl bibendum ornare nec at augue. Integer semper feugiat varius. </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
