--- a/Platzi-games/landing.html
+++ b/Platzi-games/landing.html
@@ -6,7 +6,7 @@
   </head>
   <body> 
     <header>
-      <h1>PlatziGames</h1><a class="boton">Registro</a>
+      <h2>PlatziGames</h2><a class="boton">Registro</a>
     </header>
     <section class="intro">
       <div class="intro__imagen"><img src="images/imagen.png"></div>
@@ -38,5 +38,13 @@
         </div>
       </div>
     </main>
+    <footer>
+      <h4>PlatziGames</h4>
+      <ul>
+        <li>Acerca</li>
+        <li>Noticias</li>
+        <li>Contacto</li>
+      </ul>
+    </footer>
   </body>
 </html>
