--- a/Platzi-games/homePage.html
+++ b/Platzi-games/homePage.html
@@ -6,10 +6,11 @@
   </head>
   <body> 
     <header>
-      <h2>PlatziGames</h2><a class="boton">Registro</a>
+      <h1>PlatziGames</h1><a class="boton">Registro</a>
     </header>
+    <h1>prueba xd</h1>
     <footer>
-      <h4>PlatziGames</h4>
+      <h1>PlatziGames</h1>
       <ul>
         <li>Acerca</li>
         <li>Noticias</li>
